--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
     "@angular/router": "^6.0.9",
+    "@asymmetrik/ngx-leaflet": "^4.0.0",
+    "@asymmetrik/ngx-leaflet-markercluster": "^1.0.0",
     "core-js": "^2.5.4",
+    "leaflet": "^1.3.3",
+    "leaflet.markercluster": "^1.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.9",
     "@angular-devkit/build-angular": "~0.6.8",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.9",
     "@angular/language-service": "^6.0.9",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
+    "@types/leaflet": "^1.2.8",
+    "@types/leaflet.markercluster": "^1.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
@@ -45,6 +50,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   }
 }
