added and configured service worker

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^6.4.0",
     "@angular/platform-browser": "^6.0.9",
     "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/pwa": "^0.6.8",
     "@angular/router": "^6.0.9",
+    "@angular/service-worker": "^6.0.9",
     "@asymmetrik/ngx-leaflet": "^4.0.0",
     "@asymmetrik/ngx-leaflet-markercluster": "^1.0.0",
     "core-js": "^2.5.4",
